# gpu_maths

./: CMakeLists.txt  README.md
apps/: CMakeLists.txt  asum.cpp  gemv.cpp  mulbsx.cpp  normailze.cpp  permute.cpp  powx.cpp
include/: math_util.hpp
src/: CMakeLists.txt  math_util.cu
